--- a/1223-MultiHop-RAG/CivilCode-ChatBot-Notebook/.env.example
+++ b/1223-MultiHop-RAG/CivilCode-ChatBot-Notebook/.env.example
@@ -1,14 +1,15 @@
-AZURE_OPENAI_ENDPOINT = "https://{{YourResources}}.openai.azure.com/"
+AZURE_OPENAI_ENDPOINT =
 AZURE_OPENAI_DEPLOYMENT_NAME_CHAT = "gpt-4o-mini"
 AZURE_OPENAI_DEPLOYMENT_NAME_EMBEDDINGS = "text-embedding-3-small"
 AZURE_OPENAI_API_VERSION = "2024-08-01-preview"
 AZURE_OPENAI_API_KEY =
 
-LANGCHAIN_API_KEY =
+MY_AZURE_OPENAI_ENDPOINT =
+MY_AZURE_OPENAI_DEPLOYMENT_NAME_CHAT = "gpt-4o"
+MY_AZURE_OPENAI_API_KEY =
 
-PGVECTOR_CONNECTION_STRING = "postgresql+psycopg2://postgres:postgres@127.0.0.1:5432/langchain-rag-store"
+PGVECTOR_CONNECTION_STRING = "postgresql+psycopg2://postgres:postgres@127.0.0.1:5433/civilcode" # Notice port is 5433
 
 ### Docker Compose ###
-POSTGRES_DB = "langchain-rag-store"
 POSTGRES_USER = "postgres"
 POSTGRES_PASSWORD = "postgres"
